--- a/modules/ui-themes/src/main/resources/halo/components/sidemenu/sidemenu.scss
+++ b/modules/ui-themes/src/main/resources/halo/components/sidemenu/sidemenu.scss
@@ -352,6 +352,7 @@ $cuba-sidemenu-userindicator-font-weight: $v-font-weight !default;
   .#{$primary-stylename}-item-thumbnail-icon {
     font-family: FontAwesome;
     font-size: 1.2em;
+    font-weight: 400;
   }
 
   .#{$primary-stylename}-item-header {
